--- a/main.html
+++ b/main.html
@@ -8,6 +8,15 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Login Form</h1>
+	<form>
+		<input id="username" placeholder="Username" type="text">
+		<input id="password" placeholder="Password" type="password">
+		<input id="checkbox" type="checkbox">
+		<label for="checkbox">Remember me</label>
+		<input id="submit" type="submit" value="Submit">
+		<button id="existing" style="display:hidden;">Login as existing user</button>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
