--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 		<input id="checkbox" type="checkbox">
 		<label for="checkbox">Remember me</label>
 		<input id="submit" type="submit" value="Submit">
-		<button id="existing" style="display:hidden;">Login as existing user</button>
+		<button id="existing" style="display:none;">Login as existing user</button>
 	</form>
     <script type="text/javascript" src="./script.js">
 </script>
