--- a/main.html
+++ b/main.html
@@ -10,7 +10,9 @@
 	<!-- the entire body must be written by student -->
 	<h1>Login Form</h1>
 	<form>
+		<label for="username">Username</label>
 		<input id="username" placeholder="Username" type="text">
+		<label for="password">Password</label>
 		<input id="password" placeholder="Password" type="password">
 		<input id="checkbox" type="checkbox">
 		<label for="checkbox">Remember me</label>
@@ -23,3 +25,4 @@
 </body>
 
 </html>
+'
