--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 		<label for="password">Password:</label>
 		<input id="password" placeholder="Password" type="password">
 		<input id="checkbox" type="checkbox">
-		<label for="checkbox">Remember me</label>
+		<label for="checkbox">Remember me:</label>
 		<input id="submit" type="submit" value="Submit">
 		<button id="existing" style="display:none;">Login as existing user</button>
 	</form>
