--- a/main.html
+++ b/main.html
@@ -3,26 +3,25 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-	<h1>Login Form</h1>
-	<form>
-		<label for="username">Username: </label>
-		<input id="username" placeholder="Username" type="text">
-		<label for="password">Password:</label>
-		<input id="password" placeholder="Password" type="password">
-		<input id="checkbox" type="checkbox">
-		<label for="checkbox">Remember me:</label>
-		<input id="submit" type="submit" value="Submit">
-		<button id="existing" style="display:none;">Login as existing user</button>
-	</form>
-    <script type="text/javascript" src="./script.js">
+<!-- the entire body must be written by student -->
+<h1>Login Form</h1>
+<form>
+<label for="username">Username:</label>
+<input id="username" placeholder="Username" type="text">
+<label for="password">Password:</label>
+<input id="password" placeholder="Password" type="password">
+<input id="checkbox" type="checkbox">
+<label for="checkbox">Remember me:</label>
+<input id="submit" type="submit" value="Submit">
+</form>
+<button id="existing" style="visiblity:hidden;">Login as existing user</button>
+<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
 
 </html>
-'
