--- a/main.html
+++ b/main.html
@@ -1,27 +1,73 @@
 <!DOCTYPE html>
-
 <html>
+  <head>
+    <title>Login Form</title>
+  </head>
+  <body>
+    <h1>Login Form</h1>
+    <form>
+      <label for="username">Username:</label>
+      <input type="text" id="username" name="username" placeholder="Username">
 
-<head>
-<link rel="stylesheet" href="styles.css">
-</head>
+      <br>
 
-<body>
-<!-- the entire body must be written by student -->
-<h1>Login Form</h1>
-<form>
-<label for="username">Username:</label>
-<input id="username" placeholder="Username" type="text">
-<label for="password">Password:</label>
-<input id="password" placeholder="Password" type="password">
-<input id="checkbox" type="checkbox">
-<label for="checkbox">Remember me:</label>
-<input id="submit" type="submit" value="Submit">
-</form>
-<button id="existing" style="visiblity:hidden;">Login as existing user</button>
-<script type="text/javascript" src="./script.js">
-</script>
+      <label for="password">Password:</label>
+      <input type="password" id="password" name="password" placeholder="Password">
 
-</body>
+      <br>
 
+      <label for="checkbox">Remember me:</label>
+      <input type="checkbox" id="checkbox" name="checkbox">
+
+      <br>
+
+      <input type="submit" id="submit" name="submit" value="Submit">
+    </form>
+
+    <script>
+      const form = document.querySelector('form');
+      const usernameInput = document.querySelector('#username');
+      const passwordInput = document.querySelector('#password');
+      const checkboxInput = document.querySelector('#checkbox');
+
+      // Check if there are saved details in local storage
+      if (localStorage.getItem('username') && localStorage.getItem('password')) {
+        const existingButton = document.createElement('button');
+        existingButton.id = 'existing';
+        existingButton.innerText = 'Login as existing user';
+        form.appendChild(existingButton);
+      }
+
+      // Listen for form submission
+      form.addEventListener('submit', (e) => {
+        e.preventDefault(); // Prevent form from submitting
+
+        // Get input values
+        const usernameValue = usernameInput.value;
+        const passwordValue = passwordInput.value;
+
+        // Save details to local storage if checkbox is checked
+        if (checkboxInput.checked) {
+          localStorage.setItem('username', usernameValue);
+          localStorage.setItem('password', passwordValue);
+        } else {
+          // Remove saved details from local storage if checkbox is unchecked
+          localStorage.removeItem('username');
+          localStorage.removeItem('password');
+        }
+
+        // Show alert with username
+        alert(`Logged in as ${usernameValue}`);
+      });
+
+      // Listen for existing button click
+      const existingButton = document.querySelector('#existing');
+      if (existingButton) {
+        existingButton.addEventListener('click', () => {
+          const savedUsername = localStorage.getItem('username');
+          alert(`Logged in as ${savedUsername}`);
+        });
+      }
+    </script>
+  </body>
 </html>
